# BumpBlaster5000

./: .gitignore  README.md  environment.yml  gui.ui  init.py  prairie_link_client.py  pyproject.toml  setup.py  utils.py
BumpBlaster5000/: __init__.py  not__init__.py  params.py  shared_memory.py  utils.py
BumpBlaster5000/experiment_protocols/: Pattern_4pix_bar.mat  Pattern_bar_example_2pix.mat  __init__.py  across_circ_0deg_bothgap_500ms.py  across_circ_0deg_nolag.py  across_circ_0deg_optolead.py  across_circ_0deg_vislead.py  across_circ_180deg_bothgap_500ms.py  across_circ_180deg_nolag.py  across_circ_180deg_optolead.py  across_circ_180deg_vislead.py  bar-jump-v2.py  bar-jump-v2_longer.py  bar-jump.py  bar_jump_v2.py  bar_jump_v2_20s_trials.py  bar_jump_v2_30s_trials.py  bar_jump_v2_60s_trials.py  bar_jump_v2_longer.py  bar_jump_v2_test.py  bar_jumping_pi_TQ.py  dangling_fly_two_sec_pairing.py  dangling_fly_two_sec_pairing_reversed.py  dark_trial_3min.py  fixed_0deg_remap.py  fixed_180deg_remap.py  fixed_270deg_remap.py  fixed_cw_remap.py  flash_bar.py  open_loop_cw.py  open_loop_cw_ccw.py  open_loop_squares.py  puff_pairing_5x.py  random_remap.py  remap_0deg_visgap_100ms.py  remap_0deg_visgap_500ms.py  remap_180deg_visgap_100ms.py  remap_180deg_visgap_500ms.py  remap_novis_control.py  test_closed_loop_squares.py
prairie_link_client/: init.py  main.py  plugin_viewer.py  plugin_viewer.ui  plugin_viewer_2.py
scratch/: roi_drawing.py
son_of_jackfish/: camera.py  fictrac_utils.py  gui.py  gui.ui  init.py  main.py  prairie_link_client.py  prarie_link_client.py
(+83 files in other folders)
